# TJUDRLLAB-ARX_LIFT2s

./: .gitignore  .gitmodules  source.txt
ARX_Realenv/: __init__.py
Collect/: Collect公用方法说明.md  README.md  __init__.py  collect_3dmouse.py  collect_gravity.py  collect_one_arm.py  collect_two_arms.py  collect_utils.py  collect_vr.py  collect_vr_two_arms.py  convert_lerobot.py  replay.py  visualize_lerobot_v21.py  visualize_lerobot_v3.py
Demo/: Demo脚本函数参数说明.md  __init__.py  arx_fail_detect.py  arx_pointing.py  autonav_robot.py  base_calib_collect.py  collet4er.py  demo_hug_two_boxes_to_rear_tray.py  demo_utils.py  dual_arm_hug_pick_place.py  dual_cup_pick_planning.py  dual_cup_pick_planning_for_qwen.py  dual_cup_pick_planning_parallel.py  dual_cup_pick_try.py  dual_cup_place_planning.py  dual_cup_straw.py  dual_swap.py  gradio_app.py  height_test_collect.py  lift_pwz_collect.py  motion_move_away.py  motion_pick_place_cup.py  motion_pick_place_deepbox.py  motion_pick_place_hug.py  motion_pick_place_normal_object.py  motion_swap.py  move_away.py  nav_clean_sweep_floor.py  nav_demo.py  nav_dual_sweep.py  nav_goal.py  nav_goal_plus.py  nav_pick_demo.py  nav_utils.py  pick_medical_box.py  pick_multi_box.py  point2pos_utils.py  shelf_dual_pick.py  shelf_prompt_parser.py  shelf_search.py  (+10 more)
Deployment/: deployment_utils.py  pi05_client.py  pi05_protocol.py  testACT.py  testACT_parallel.py  testDiffusion.py  testOfficialACT.py  testPI05.py  (+1 more)
Src/urdf_lift2/: CMakeLists.txt  package.xml
Src/urdf_lift2/config/: joint_names_lift2.yaml
Src/urdf_lift2/urdf/: lift2.urdf
(+41 files in other folders)
